Added example/starter icon button.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<div class="divider py-1 bg-dark"></div>
 	<!-- Example single danger button -->
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -97,3 +97,6 @@
 	  <a class="dropdown-item" href="#">About..</a>
 	</div>
   </div>
+  <div class="divider py-1 bg-dark"></div>
+  <button class="btn"><i class="fa fa-home"></i></button>
+	<div class="divider py-1 bg-dark"></div>
