Added popup component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -100,3 +100,4 @@
   <div class="divider py-1 bg-dark"></div>
   <button class="btn"><i class="fa fa-home"></i></button>
 	<div class="divider py-1 bg-dark"></div>
+	<a [routerLink]="'secondpage'">Drive Popup!</a>
