Added traversal wrapper and visualization components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -101,3 +101,5 @@
   <button class="btn"><i class="fa fa-home"></i></button>
 	<div class="divider py-1 bg-dark"></div>
 	<a [routerLink]="'secondpage'">Drive Popup!</a>
+
+	<traversal-wrapper></traversal-wrapper>
