Added icon buttons and attached icon images

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="divider py-1 bg-dark"></div>
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  File
@@ -13,7 +13,7 @@
 	</div>
   </div>
   
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Edit
@@ -23,7 +23,7 @@
 	</div>
   </div>
   
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Clean Up
@@ -43,7 +43,7 @@
 	</div>
   </div>
   
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Treemap
@@ -57,8 +57,7 @@
 	  <a class="dropdown-item" href="#">Help With Treemaps</a>
 	</div>
   </div>
-  
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Report
@@ -68,7 +67,7 @@
 	</div>
   </div>
   
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Options
@@ -86,7 +85,7 @@
 	</div>
   </div>
   
-	<!-- Example single danger button -->
+
 <div class="btn-group">
 	<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	  Help
@@ -98,8 +97,15 @@
 	</div>
   </div>
   <div class="divider py-1 bg-dark"></div>
-  <button class="btn"><i class="fa fa-home"></i></button>
+  <button><span class="openDrive"></span></button>
+  <button><span class="refresh"></span></button>
+  <button><span class="openItem"></span></button>
+  <button><span class="copyPath"></span></button>
+  <button><span class="explorer"></span></button>
+  <button><span class="openCMD"></span></button>
+  <button><span class="refreshSelected"></span></button>
+  <button><span class="delete"></span></button>
+  <button><span class="properties"></span></button>
 	<div class="divider py-1 bg-dark"></div>
-	<a [routerLink]="'secondpage'">Drive Popup!</a>
-
+	<a [routerLink]="'drive-popup'">Drive Popup!</a>
 	<traversal-wrapper></traversal-wrapper>
