--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -29,3 +29,92 @@
   .btn:hover {
 	background-color: RoyalBlue;
   }
+	span.copyPath {
+			background-image: url('../assets\images\copyPath.svg');
+			background-size: contain;
+			cursor: pointer;
+			display: inline-block;
+			height: 52px;
+			width: 40px;
+			padding: 12px 16px;
+	}
+	span.delete {
+		background-image: url('../assets\images\Delete.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.explorer {
+		background-image: url('../assets\images\Explorer.svg');
+		background-size: contain;
+    	cursor: pointer;
+    	display: inline-block;
+    	height: 52px;
+    	width: 40px;
+   }
+    span.openCMD {
+		background-image: url('../assets\images\Open CMD.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.openDrive {
+		background-image: url('../assets\images\Open Drive.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.openItem {
+		background-image: url('../assets\images\Open Item.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.Logo {
+		background-image: url('../assets\images\Possible Logo.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.recycle {
+		background-image: url('../assets\images\Recycle.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.refreshSelected {
+		background-image: url('../assets\images\Refresh Selected.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.refresh {
+		background-image: url('../assets\images\Refresh.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
+	span.properties {
+		background-image: url('../assets\images\Show Properties.svg');
+		background-size: contain;
+		cursor: pointer;
+		display: inline-block;
+		height: 52px;
+		width: 40px;
+		}
