Added zoomIn, zoomOut, and help buttons and icons

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -106,6 +106,9 @@
   <button><span class="refreshSelected"></span></button>
   <button><span class="delete"></span></button>
   <button><span class="properties"></span></button>
+  <button><span class="zoomIn"></span></button>
+  <button><span class="zoomOut"></span></button>
+  <button><span class="help"></span></button>
 	<div class="divider py-1 bg-dark"></div>
 	<a [routerLink]="'drive-popup'">Drive Popup!</a>
 	<traversal-wrapper></traversal-wrapper>
