--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -1,36 +1,33 @@
-<h1>visualization</h1>
+<div id="content" *ngIf="this.data !== undefined">
+	<div id="explorer">
+		<ng-template #recursiveListTmpl let-list="list">
+			<div *ngFor="let item of list">
+				<div *ngIf="item[0] !== '::meta::'">
+					<li class="" value="">
+						<span *ngIf="!this.isNumber(item[1])">
+							<a href="#{{this.setId(item, list)}}" class="btn btn-info" data-toggle="collapse">V</a>
+						</span>
+						{{ item[0] }}
+						<span *ngIf="this.isNumber(item[1])">
+							{{item[1]}}
+						</span>
+						<ul id="{{this.tempId}}" class="explorerList collapse"
+							*ngIf="this.getItems(item[1]).length > 0">
+							<ng-container
+								*ngTemplateOutlet="recursiveListTmpl; context:{ list: this.getItems(item[1]) }">
+							</ng-container>
+						</ul>
+					</li>
+				</div>
+			</div>
+		</ng-template>
+		<ul class="explorerList">
+			<ng-container *ngTemplateOutlet="recursiveListTmpl; context:{list: this.getItems(this.data)}">
+			</ng-container>
+		</ul>
+	</div>
 
 
-<div id="explorer">
-
-	<ul class="explorerList">
-		<ng-container *ngTemplateOutlet="recursiveListTmpl; context:{list: this.getItems(this.data)}">
-		</ng-container>
-	</ul>
+	<div id="blocks">
+	</div>
 </div>
-
-
-<ng-template #recursiveListTmpl let-list="list">
-	<div *ngFor="let item of list">
-		<div *ngIf="item[0] !== '::meta::'">
-
-			<li class="" value="">
-				<span *ngIf="!this.isNumber(item[1])">
-					<a href="#{{this.setId(item, list)}}" class="btn btn-info" data-toggle="collapse">V</a>
-				</span>
-				{{ item[0] }}
-				<span *ngIf="this.isNumber(item[1])">
-					{{item[1]}}
-				</span>
-				<ul id="{{this.tempId}}" class="explorerList collapse" *ngIf="this.getItems(item[1]).length > 0">
-					<ng-container *ngTemplateOutlet="recursiveListTmpl; context:{ list: this.getItems(item[1]) }">
-					</ng-container>
-				</ul>
-
-			</li>
-		</div> 
-	</div> 
-</ng-template>
-
-<!-- <p> {{this.fullObject}}</p> -->
-<!-- <p *ngIf="this.data !== undefined"> {{this.fullObject}}</p> -->
