Added getting folder from backend and process killing

--- a/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
+++ b/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
@@ -1,2 +1,13 @@
+<div class="divider py-1 bg-dark"></div>
+<button id="openDriveButton" (click)="this.openDrive()"><span class="openDrive"></span></button>
+<button><span class="refresh"></span></button>
+<button><span class="openItem"></span></button>
+<button><span class="copyPath"></span></button>
+<button><span class="explorer"></span></button>
+<button><span class="openCMD"></span></button>
+<button><span class="refreshSelected"></span></button>
+<button><span class="delete"></span></button>
+<button><span class="properties"></span></button>
+  <div class="divider py-1 bg-dark"></div>
 <visualization *ngIf="data !== undefined" [data]="this.data">
 </visualization>
