Added a bunch of minor changes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -97,7 +97,7 @@
 	</div>
   </div>
   <div class="divider py-1 bg-dark"></div>
-  <button><span class="openDrive"></span></button>
+  <!-- <button><span class="openDrive"></span></button>
   <button><span class="refresh"></span></button>
   <button><span class="openItem"></span></button>
   <button><span class="copyPath"></span></button>
@@ -110,5 +110,5 @@
   <button><span class="zoomOut"></span></button>
   <button><span class="help"></span></button>
 	<div class="divider py-1 bg-dark"></div>
-	<a [routerLink]="'drive-popup'">Drive Popup!</a>
+	<a [routerLink]="'drive-popup'">Drive Popup!</a> -->
 	<traversal-wrapper></traversal-wrapper>
