--- a/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
+++ b/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
@@ -1,3 +1,10 @@
+<!-- <ngx-spinner
+  type="line-scale-pulse-out"
+  size="medium"
+  color="#FFF"
+  fullScreen="false"
+></ngx-spinner> -->
+
 <div class="divider py-1 bg-dark"></div>
 <button id="openDriveButton" (click)="this.openDrive()" title = "Open Drive"><span class="openDrive"></span></button>
 <button title = "Refresh"><span class="refresh"></span></button>
