--- a/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
+++ b/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
@@ -8,6 +8,12 @@
 <button><span class="refreshSelected"></span></button>
 <button><span class="delete"></span></button>
 <button><span class="properties"></span></button>
+<button><span class="zoomIn"></span></button>
+<button><span class="zoomOut"></span></button>
+<button><span class="help"></span></button>
   <div class="divider py-1 bg-dark"></div>
 <visualization *ngIf="data !== undefined" [data]="this.data">
 </visualization>
+<a>-- Possible Icon for folders --
+<img  src="../../assets\images\folder.svg" width="50" height="50"> 
+</a>
