--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -5,11 +5,12 @@
 				<div *ngIf="item[0] !== '::meta::'">
 					<li class="" value="">
 						<span *ngIf="!this.isNumber(item[1])">
-							<a href="#{{this.setId(item, list)}}" class="btn btn-info" data-toggle="collapse">V</a>
+							<a href="#{{this.setId(item, list)}}" class="btn btn-info" data-toggle="collapse">
+							</a>
 						</span>
-						{{ item[0] }}
+						{{item[0]}}
 						<span *ngIf="this.isNumber(item[1])">
-							{{item[1]}}
+						{{item[1]}}
 						</span>
 						<ul id="{{this.tempId}}" class="explorerList collapse"
 							*ngIf="this.getItems(item[1]).length > 0">
@@ -26,8 +27,6 @@
 			</ng-container>
 		</ul>
 	</div>
-
-
 	<div id="blocks">
 	</div>
 </div>
