--- a/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
+++ b/frontend/src/app/traversal-wrapper/traversal-wrapper.component.html
@@ -15,7 +15,7 @@
 	  <div class="dropdown-divider"></div>
 	  <a class="dropdown-item" href="#">Refresh</a>
 	  <div class="dropdown-divider"></div>
-	  <a class="dropdown-item" href="#">Quit</a>
+	  <a class="dropdown-item" (click)="this.closeApp()">Quit</a>
 	</div>
   </div>
   
