--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -1,3 +1,4 @@
+<!-- This is a program to show the file sizes and creates the dynamic visuals of the file explorer part of the program-->
 <div id="content" *ngIf="this.data !== undefined">
 	<div id="explorer">
 		<ng-template #recursiveListTmpl let-list="list">
