Some cleaning up with visualization

--- a/frontend/src/app/visualization/visualization.component.css
+++ b/frontend/src/app/visualization/visualization.component.css
@@ -13,6 +13,21 @@ span.folder {
 }
 
 .explorerList {
-  
   overflow-y: hidden;
+
+  list-style: none;
 }
+
+.explorerItem{
+	outline: 1px black dashed;
+	padding: 5px;
+
+
+	font-size: 20px;
+}
+
+.collapseButton{
+	background-color: black;
+	border-color: transparent;
+}
+
