Adding small changes to file type visualization

--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -1,4 +1,4 @@
-<div id="content" class="container-fluid" *ngIf="this.data !== undefined">
+<div id="content" class="container-fluid" *ngIf="this.done">
 	<div id="topRow" class="row">
 		<div id="explorer" class="col-9" style="outline: 1px black solid">
 
@@ -14,7 +14,6 @@
 									data-toggle="collapse">V</a>
 							</span>
 							{{item[0]}}
-
 
 							<!-- File numbers -->
 							<span class="sizeNumber" *ngIf="this.isNumber(item[1])">
@@ -38,15 +37,26 @@
 			</ng-template>
 
 
+
 			<!-- The actual explorer list component -->
 			<ul class="explorerList">
 				<ng-container *ngTemplateOutlet="recursiveListTmpl; context:{list: this.getItems(this.data)}">
 				</ng-container>
 			</ul>
+			
 		</div>
 
-		<div id="fileTypes" class="col-3" style="outline: 1px black solid">
+
+
+		<div id="fileTypesasdf" class="col-3" style="outline: 1px black solid">
 			<h1>File Types</h1>
+
+			<ul>
+				<li *ngFor="let item of [0, 1, 2, 3, 4]">
+					<p>{{item}}</p>
+				</li>
+			</ul>
+
 		</div>
 	</div>
 
@@ -54,8 +64,18 @@
 	<div class="row">
 		<div id="blocks" class="col-12" style="outline: 1px black solid">
 			<h1>Blocks</h1>
+
+
+			<div class="container-fluid" style="height: 100%">
+				<div class="row">
+
+					<div class="folderBlock"></div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+
 
 
 </div>
