Added functionality to file types block

--- a/frontend/src/app/visualization/visualization.component.css
+++ b/frontend/src/app/visualization/visualization.component.css
@@ -12,6 +12,11 @@ span.folder {
   overflow-y: scroll;
 }
 
+#fileTypes {
+	height: 50vh;
+	overflow-y: scroll;
+}
+
 .explorerList {
   overflow-y: hidden;
 
