--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -49,17 +49,13 @@
 
 		<div id="fileTypes" class="col-3" style="outline: 1px black solid">
 			<h1>File Types</h1>
-<!-- 
-			<div>
+<!-- 		<div>
 				<ul>
-
 					<li *ngFor="let item of this.fileTypes" [item]="item">
 						<div>
 							{{item}}
 						</div>
 					</li>
-
-
 				</ul>
 			</div> -->
 
@@ -72,16 +68,15 @@
 			<h1>Blocks</h1>
 
 
-			<div class="container-fluid" style="height: 100%">
-				<div class="row">
 
-					<div class="folderBlock"></div>
+			
+			<!-- <div class="container-fluid" style="height: 100%">
+				<div class="row">
+					
+
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
-
-
-
 
 </div>
